--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         <div class="hero">
             <nav>
 
-                <ul class="nav-bar text-body">
-                    <li class="nav-items "><a class="text-body font-weight-bolder" href="index.html">Home</a>
-                    </li>
+                <ul class="nav-bar">
+                    <li class="nav-items "><a class="text-body font-weight-bolder" href="index.html">Home</a></li>
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="about.html">About</a></li>
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="room.html">Rooms</a>
                     </li>
+                    <li class="nav-items"><a class="text-body font-weight-bolder" href="booking.html">Bookings</a></li>
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="dining.html">Dining</a></li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="booking.html">Bookingsit</a>
-                    </li>
                 </ul>
             </nav>
             <video loop muted autoplay>
