--- a/about.html
+++ b/about.html
@@ -8,25 +8,131 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/4137f8c74d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="d1">
-        <div class="hero">
+
+
+        <div class="hero-about">
             <nav>
                 <ul class="nav-bar">
-                    <li class="nav-items "><a class="text-body font-weight-bolder" href="index.html">Home</a></li>
+                    <li class="nav-items "><a class="text-white font-weight-bolder" href="index.html">Home</a></li>
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="about.html">About</a></li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="room.html">Rooms</a>
-                    </li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="booking.html">Bookings</a></li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="dining.html">Dining</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="room.html">Rooms</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="dining.html">Dining</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
-            <h1 class="sub-heading" style="color: black;">ABOUT</h1>
+
+        </div>
+        <div class="content">
+            <h2><i>Discover Orrencia Royale</i></h2>
+            <p>Welcome to Orrencia Royale, a sanctuary of timeless elegance. From our majestic lobby to breathtaking
+                views and world-class services, every detail is designed to offer you more than just a stay — an
+                experience of pure luxury</p>
         </div>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 ">
+                    <img src="about-1.jpg" width="100%" height="100%">
+                </div>
+                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4  ">
+                    <div class="about-text1">
+                        <h3>Orrencia Royale is more than a destination —</h2>
 
+                            <p>At Orrencia Royale, we blend modern luxury with classic charm, offering an experience of
+                                timeless elegance and refined comfort. From the moment you enter our grand lobby, you
+                                are embraced with warmth and exclusivity. Each room is a royal escape — complete with
+                                opulent interiors, serene ambiance, and personalized service. Whether indulging in fine
+                                dining or simply relaxing in our exquisite spaces, every moment with us is designed to
+                                be unforgettable.</p>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="space">
+
+        </div>
+
+        <div class="container-fluid  ">
+            <div style=" " class="row">
+
+                <div style=" z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4 lobby-1">
+                    <div class="about-text1">
+                        <h3>The Grand Lobby of Orrencia Royale —</h2>
+
+                            <p>The grand lobby of Orrencia Royale is more than an entrance — it's a statement of luxury.
+                                With soaring ceilings, glowing chandeliers, and refined décor, it welcomes you with
+                                warmth and exclusivity. Whether arriving, meeting, or simply pausing to admire its
+                                beauty, the lobby sets the perfect tone for your journey into elegance and unforgettable
+                                memories.</p>
+                    </div>
+                </div>
+                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 lobby-2">
+                    <img src="about-2.jpg" width="100%" height="100%">
+                </div>
+            </div>
+        </div>
+        <div class="space">
+
+        </div>
+
+        <div class="container-fluid  ">
+            <div style=" " class="row">
+
+                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 ">
+                    <img src="about-3.png" width="100%" height="100%">
+                </div>
+                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4  ">
+                    <div class="about-text1">
+                        <h3>Experience the View where the Ocean Meets Luxury —</h2>
+                            <p> Nestled along the turquoise shoreline, Orrencia Royale is where the beauty of the ocean
+                                meets timeless elegance. Wake up to the sound of waves, stroll across golden sands, and
+                                indulge in world-class comfort that makes every moment unforgettable. Here, the sea
+                                becomes your backdrop, and luxury becomes your lifestyle.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-footer container-fluid p-2">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <p class="small">
+                        <i class="fa-solid fa-location-dot"></i>
+                        Barcelona, Spain
+                    </p>
+                </div>
+
+                <div class="col-12 col-lg-6">
+                    <p class="small">
+                        <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+                        <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
+                    </p>
+                </div>
+                <div class="small text-center col-12 col-lg-6 container-fluid">
+                    <p style="font-family:'Times New Roman', Times, serif;">
+                        © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                        Terms & Conditions | All Rights Reserved</p>
+                </div>
+            </div>
+
+        </div>
 
 
 
