--- a/dining.html
+++ b/dining.html
@@ -15,12 +15,12 @@
         <div class="hero">
             <nav>
                 <ul class="nav-bar">
-                    <li class="nav-items "><a class="text-body font-weight-bolder" href="index.html">Home</a></li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="about.html">About</a></li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="room.html">Rooms</a>
+                    <li class="nav-items "><a class="text-white font-weight-bolder" href="index.html">Home</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="about.html">About</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="room.html">Rooms</a>
                     </li>
-                    <li class="nav-items"><a class="text-body font-weight-bolder" href="booking.html">Bookings</a></li>
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="dining.html">Dining</a></li>
+                    <li class="nav-items"><a class="text-white font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
             <h1 class="sub-heading" style="color: black;">DINING</h1>
