--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="container-fluid  ">
-            <div style=" " class="row">
+            <div class="row">
 
                 <div style=" z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4 lobby-1">
                     <div class="about-text1">
@@ -93,8 +93,9 @@
 
         </div>
 
+
         <div class="container-fluid  ">
-            <div style=" " class="row">
+            <div class="row">
 
                 <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 ">
                     <img src="about-3.png" width="100%" height="100%">
