--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav-items"><a class="text-white font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
-            <video loop muted autoplay>
+            <video loop muted autoplay playsinline>
                 <source src="cover-hero1.mp4">
             </video>
 
