added room section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
 
 
         </div>
+        <div class="about-footer container-fluid w-100">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <p class="small">
+                        <i class="fa-solid fa-location-dot p-2"></i>
+                        Barcelona, Spain
+                    </p>
+                </div>
+
+                <div class="col-12 col-lg-6 p-2">
+                    <p class="small">
+                        <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+                        <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
+                    </p>
+                </div>
+                <div class="small text-center col-12 col-lg-6 container-fluid">
+                    <p style="font-family:'Times New Roman', Times, serif;">
+                        © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                        Terms & Conditions | All Rights Reserved</p>
+                </div>
+            </div>
+
+        </div>
     </div>
 
 </body>
