--- a/room.html
+++ b/room.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="d1">
-        <div class="hero">
+        <div class="hero-room">
             <nav>
 
                 <ul class="nav-bar">
@@ -24,8 +24,192 @@
                     <li class="nav-items"><a class="text-white font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
-            <h1 class="sub-heading" style="color: black;">ROOMS</h1>
+            <!-- <h1 class="sub-heading" style="color: black;">ROOMS</h1> -->
         </div>
+        <section class="intro text-center ">
+            <h2>Discover Our Luxurious Rooms & Suites</h2>
+            <p>
+                At Orrencia Royale, each room is crafted to offer a blend of elegance, comfort,
+                and modern convenience. <br> Whether you seek a cozy retreat or a grand suite,
+                our accommodations are designed to make your stay unforgettable.
+            </p>
+        </section>
+        <div class="bg">
+            <div class="room-card">
+
+                <div class="card">
+                    <img src="images/room-1.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Standard Room</h5>
+                        <p class="card-text">Experience comfort with modern interiors, a king-size bed, and city view.
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>🛏️ Sleeps 2 Adults</li>
+                            <li>📶 Free WiFi</li>
+                            <li>❄️ Air Conditioning</li>
+                            <li>🍽️ Complimentary Breakfast</li>
+
+                        </ul>
+                        <p class="price"><strong> € 220 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/room-2.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Premium Room</h5>
+                        <p class="card-text">Refined elegance with spacious interiors, premium bedding, and exclusive
+                            amenities</p>
+                        <ul class="list-unstyled">
+                            <li>🛏️ 2 Adults + 1 Child</li>
+                            <li>📶 High-Speed WiFi</li>
+                            <li>☕ Coffee/Tea Maker</li>
+                            <li>🌇 Private Balcony</li>
+                        </ul>
+                        <p class="price"><strong> € 280 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="images/room-3.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Deluxe Room</h5>
+                        <p class="card-text">Modern decor, king-size bed, and panoramic city or garden views.</p>
+                        <ul class="list-unstyled">
+                            <li>🛏️ Sleeps 2 Adults</li>
+                            <li>📶 Free WiFi</li>
+                            <li>🛁 Luxury Bath Amenities</li>
+                            <li>🍷 Mini-Bar Access</li>
+                        </ul>
+                        <p class="price"><strong> € 320 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/room-4.jpg" width="100%" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Executive Suite</h5>
+                        <p class="card-text">Ideal for business travel with ergonomic workspace and high-tech comforts.
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>💻 Dedicated Workspace</li>
+                            <li>📶 High-Speed WiFi</li>
+                            <li>📞 Direct Dial Phone</li>
+                            <li>🍽️ Complimentary Breakfast</li>
+                        </ul>
+                        <p class="price"><strong> € 400 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/room-5.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Executive Suite</h5>
+                        <p class="card-text">Ideal for business travel with ergonomic workspace and high-tech comforts.
+                        </p>
+                        <ul class="list-unstyled">
+                            <li>💻 Dedicated Workspace</li>
+                            <li>📶 High-Speed WiFi</li>
+                            <li>📞 Direct Dial Phone</li>
+                            <li>🍽️ Complimentary Breakfast</li>
+                        </ul>
+                        <p class="price"><strong> € 380 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/kid-room.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Kids Room</h5>
+                        <p class="card-text">A colorful, playful space curated for comfort and fun.</p>
+                        <ul class="list-unstyled">
+                            <li>🛏️ Sleeps 2 Children</li>
+                            <li>🎮 Entertainment & Games</li>
+                            <li>📺 Kids Channels</li>
+                            <li>🧸 Child-Safe Interiors</li>
+                        </ul>
+                        <p class="price"><strong> € 150 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/hall-1.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Conference Room</h5>
+                        <p class="card-text">Fully equipped venue for corporate events, trainings, and seminars.</p>
+                        <ul class="list-unstyled">
+                            <li>👥 50–100 Guests</li>
+                            <li>💻 Projector & Screen</li>
+                            <li>🎤 Audio-Visual Setup</li>
+                            <li>☕ Catering Available</li>
+                        </ul>
+                        <p class="price"><strong> € 500 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/hall-2.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Meeting Room</h5>
+                        <p class="card-text">Perfect for board meetings and compact business gatherings.</p>
+                        <ul class="list-unstyled ">
+                            <li>👥 10–15 Guests</li>
+                            <li>📶 WiFi & Screen</li>
+                            <li>🎤 Conference Phone</li>
+                            <li>☕ Refreshments on Request</li>
+                        </ul>
+                        <p class="price"><strong> € 300 / night</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pool.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Swimming Pool</h5>
+                        <p class="card-text">Relax in our luxury pool with sunbeds and poolside service.</p>
+                        <ul class="list-unstyled">
+                            <li>🏊 Adult & Kids Sections</li>
+                            <li>🌴 Poolside Lounge</li>
+                            <li>🥂 Drinks & Snacks Service</li>
+                            <li>🛟 Lifeguard on Duty</li>
+                        </ul>
+                        <p><strong>Complimentary Access</strong></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+        <div class="about-footer container-fluid w-100 ">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <p class="small">
+                        <i class="fa-solid fa-location-dot p-2"></i>
+                        Barcelona, Spain
+                    </p>
+                </div>
+
+                <div class="col-12 col-lg-6 p-2">
+                    <p class="small">
+                        <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+                        <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
+                    </p>
+                </div>
+                <div class="small text-center col-12 col-lg-6 container-fluid">
+                    <p style="font-family:'Times New Roman', Times, serif;">
+                        © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                        Terms & Conditions | All Rights Reserved</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
 
 
 
