--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 ">
+                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7  ">
                     <img src="about-1.jpg" width="100%" height="100%">
                 </div>
-                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4  ">
+                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5  ">
                     <div class="about-text1">
                         <h3>Orrencia Royale is more than a destination —</h2>
 
@@ -73,7 +73,7 @@
         <div class="container-fluid  ">
             <div class="row">
 
-                <div style=" z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4 lobby-1">
+                <div style=" z-index: -1; background-color: beige;" class="col-12 col-lg-5  lobby-1">
                     <div class="about-text1">
                         <h3>The Grand Lobby of Orrencia Royale —</h2>
 
@@ -84,7 +84,7 @@
                                 memories.</p>
                     </div>
                 </div>
-                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 lobby-2">
+                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 lobby-2">
                     <img src="about-2.jpg" width="100%" height="100%">
                 </div>
             </div>
@@ -97,10 +97,10 @@
         <div class="container-fluid  ">
             <div class="row">
 
-                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 p-4 ">
+                <div style="z-index: -1;background-color: beige;" class="col-12  col-lg-7 p-4">
                     <img src="about-3.png" width="100%" height="100%">
                 </div>
-                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5 p-4  ">
+                <div style=" z-index: -1;background-color: beige;" class="col-12 col-lg-5   ">
                     <div class="about-text1">
                         <h3>Experience the View where the Ocean Meets Luxury —</h2>
                             <p> Nestled along the turquoise shoreline, Orrencia Royale is where the beauty of the ocean
@@ -111,16 +111,16 @@
                 </div>
             </div>
         </div>
-        <div class="about-footer container-fluid p-2">
+        <div class="about-footer container-fluid w-100">
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <p class="small">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-location-dot p-2"></i>
                         Barcelona, Spain
                     </p>
                 </div>
 
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 p-2">
                     <p class="small">
                         <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
                         <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
