--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7  ">
-                    <img src="about-1.jpg" width="100%" height="100%">
+                <div style="background-color: beige;" class="col-12  col-lg-7  ">
+                    <img class="img" src="about-1.jpg" width="100%" height="100%">
                 </div>
-                <div style="  z-index: -1 ;background-color: beige;" class="col-12 col-lg-5  ">
+                <div style="background-color: beige;" class="col-12 col-lg-5  ">
                     <div class="about-text1">
                         <h3>Orrencia Royale is more than a destination —</h2>
 
@@ -73,7 +73,7 @@
         <div class="container-fluid  ">
             <div class="row">
 
-                <div style=" z-index: -1; background-color: beige;" class="col-12 col-lg-5  lobby-1">
+                <div style=" background-color: beige;" class="col-12 col-lg-5  lobby-1">
                     <div class="about-text1">
                         <h3>The Grand Lobby of Orrencia Royale —</h2>
 
@@ -84,8 +84,8 @@
                                 memories.</p>
                     </div>
                 </div>
-                <div style=" z-index: -1; background-color: beige;" class="col-12  col-lg-7 lobby-2">
-                    <img src="about-2.jpg" width="100%" height="100%">
+                <div style="  background-color: beige;" class="col-12  col-lg-7 lobby-2">
+                    <img class="img" src="about-2.jpg" width="100%" height="100%">
                 </div>
             </div>
         </div>
@@ -97,10 +97,10 @@
         <div class="container-fluid  ">
             <div class="row">
 
-                <div style="z-index: -1;background-color: beige;" class="col-12  col-lg-7 p-4">
-                    <img src="about-3.png" width="100%" height="100%">
+                <div style="background-color: beige;" class="col-12  col-lg-7 p-4">
+                    <img class="img" src="about-3.png" width="100%" height="100%">
                 </div>
-                <div style=" z-index: -1;background-color: beige;" class="col-12 col-lg-5   ">
+                <div style="background-color: beige;" class="col-12 col-lg-5   ">
                     <div class="about-text1">
                         <h3>Experience the View where the Ocean Meets Luxury —</h2>
                             <p> Nestled along the turquoise shoreline, Orrencia Royale is where the beauty of the ocean
