--- a/room.html
+++ b/room.html
@@ -51,7 +51,7 @@
 
                         </ul>
                         <p class="price"><strong> € 220 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -67,7 +67,7 @@
                             <li>🌇 Private Balcony</li>
                         </ul>
                         <p class="price"><strong> € 280 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                             <li>🍷 Mini-Bar Access</li>
                         </ul>
                         <p class="price"><strong> € 320 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -99,7 +99,7 @@
                             <li>🍽️ Complimentary Breakfast</li>
                         </ul>
                         <p class="price"><strong> € 400 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -115,7 +115,7 @@
                             <li>🍽️ Complimentary Breakfast</li>
                         </ul>
                         <p class="price"><strong> € 380 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -130,7 +130,7 @@
                             <li>🧸 Child-Safe Interiors</li>
                         </ul>
                         <p class="price"><strong> € 150 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -145,7 +145,7 @@
                             <li>☕ Catering Available</li>
                         </ul>
                         <p class="price"><strong> € 500 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -160,7 +160,7 @@
                             <li>☕ Refreshments on Request</li>
                         </ul>
                         <p class="price"><strong> € 300 / night</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
                 <div class="card">
@@ -175,7 +175,7 @@
                             <li>🛟 Lifeguard on Duty</li>
                         </ul>
                         <p><strong>Complimentary Access</strong></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="form.html" class="btn btn-primary">Book Now</a>
                     </div>
                 </div>
             </div>
