added dining section

--- a/registration-form.html
+++ b/registration-form.html
@@ -25,7 +25,7 @@
                 class="btn btn-secondary p-2 m-2">Back</button></a>
         <div class="available">
             <h1>Your Room is available.</h1><br>
-            <h3>Please Register for Bookings.</h3>
+            <h4>One step away from a Luxurious Room.</h4>
         </div>
         <div class="form-bg">
             <form action="thankyou.html" class="form-css needs-validation" novalidate>
