--- a/room.html
+++ b/room.html
@@ -35,7 +35,7 @@
             </p>
         </section>
         <div class="bg">
-            <div class="room-card">
+            <div class="group-card">
 
                 <div class="card">
                     <img src="images/room-1.jpg" class="card-img-top">
