--- a/dining.html
+++ b/dining.html
@@ -8,11 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4137f8c74d.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="d1">
-        <div class="hero">
+        <div class="hero-dining">
             <nav>
                 <ul class="nav-bar">
                     <li class="nav-items "><a class="text-white font-weight-bolder" href="index.html">Home</a></li>
@@ -23,7 +33,243 @@
                     <li class="nav-items"><a class="text-white font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
-            <h1 class="sub-heading" style="color: black;">DINING</h1>
+            <!-- <h1 class="sub-heading" style="color: black;">DINING</h1> -->
+        </div>
+        <div class="dining-bg text-center">
+            <section id="dining" class="dining-section">
+                <h2>Our Dining Experience</h2>
+                <p class="intro-text">
+                    Indulge in a delightful culinary journey with a variety of meals prepared by our expert chefs. <br>
+                    Choose from rich Indian flavors, authentic Italian dishes, or international cuisines,
+                    thoughtfully crafted to make your dining experience memorable.
+                </p>
+            </section>
+
+        </div>
+        <div class="dining-content">
+
+            <!-------------------------------------- Beverages -------------------------------- -->
+            <h1 class="text-center">Beverages </h1>
+            <div class="group-card ">
+
+                <div class="card">
+                    <img src="images/beverages/honey-tea.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Honey Tea</h5>
+                        <p class="card-text">Naturally sweetened with honey for a calming sip.
+                        </p>
+
+                        <p class="price"><strong> € 3.50</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/beverages/green-tea.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Green Tea</h5>
+                        <p class="card-text">A soothing, antioxidant-rich brew for a refreshing start.</p>
+
+                        <p class="price"><strong> € 2.80 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/beverages/lemon-tea.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Lemon Tea</h5>
+                        <p class="card-text">Light and tangy with a citrusy twist.</p>
+
+                        <p class="price"><strong> € 2.50 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/beverages/black-tea.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Black Tea</h5>
+                        <p class="card-text">Bold, strong, and energizing with deep flavor.</p>
+
+                        <p class="price"><strong> € 2.50</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/beverages/masala-chai.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Masala Chai</h5>
+                        <p class="card-text">Traditional spiced tea bursting with Indian flavors.</p>
+
+                        <p class="price"><strong> € 3.00</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/beverages/coffee.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Coffee (Espresso/Americano)</h5>
+                        <p class="card-text">Freshly brewed for a rich and aromatic kick.</p>
+
+                        <p class="price"><strong> € 4.00 - € 5.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <!-------------------------------------- ITALIAN DISHES -------------------------------- -->
+            </div>
+            <h1 class="text-center">Italian Dishes </h1>
+            <div class="group-card ">
+
+                <div class="card">
+                    <img src="images/italian/veg-pasta.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Vegetable Pasta</h5>
+                        <p class="card-text">Fresh seasonal vegetables tossed with herbs and olive oil.
+                        </p>
+
+                        <p class="price"><strong> € 8.50</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/italian/white-sauce-pasta.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">White Sauce Pasta</h5>
+                        <p class="card-text">Creamy Alfredo-style pasta with rich cheese flavor.</p>
+
+                        <p class="price"><strong> € 9.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/italian/red-sauce-pasta.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Red Sauce Pasta</h5>
+                        <p class="card-text">Tangy tomato-based pasta with Italian herbs.</p>
+
+                        <p class="price"><strong> € 9.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/italian/spagetti.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Spagetti</h5>
+                        <p class="card-text">Classic spaghetti served with a traditional Italian sauce.</p>
+
+                        <p class="price"><strong> € 10.00</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/italian/Tortellini.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Tortellini</h5>
+                        <p class="card-text">Stuffed pasta pockets with savory fillings, cooked to perfection.</p>
+
+                        <p class="price"><strong> € 11.50</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/italian/Gnocchi.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Gnocchi</h5>
+                        <p class="card-text">Soft potato dumplings served with a light butter sauce.</p>
+
+                        <p class="price"><strong> € 11.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+
+            </div>
+
+            <h1 class="text-center">Pizza </h1>
+            <div class="group-card ">
+
+                <div class="card">
+                    <img src="images/pizza/pepperoni-pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Pepperoni Pizza with Basil</h5>
+                        <p class="card-text">Spicy pepperoni layered with fresh basil on a cheesy crust.
+                        </p>
+
+                        <p class="price"><strong> €12.00</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pizza/Artisa-Pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Artisa Pizza</h5>
+                        <p class="card-text">Handcrafted with chef's special toppings and rustic flavors. </p>
+
+                        <p class="price"><strong> €13.50</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pizza/Vegetarian-Pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Vegetable Pizza</h5>
+                        <p class="card-text">Loaded with fresh seasonal vegetables and mozzarella. </p>
+
+                        <p class="price"><strong> €11.00</strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pizza/margherita-pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Margherita Pizza</h5>
+                        <p class="card-text">Classic pizza with tomato, mozzarella, and basil.</p>
+
+                        <p class="price"><strong> € 10.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pizza/mushroom-pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Mushroom Pizza</h5>
+                        <p class="card-text">Classic mozzarella pizza topped with fresh sautéed mushrooms.</p>
+
+                        <p class="price"><strong> € 11.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/pizza/spicy-mushroom-pizza.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Spicy Mushroom Pizza</h5>
+                        <p class="card-text">Loaded with mushrooms, chili flakes, and bold spices.</p>
+
+                        <p class="price"><strong> € 12.00 </strong></p>
+                        <a href="order-form.html" class="btn btn-primary">Order Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-footer container-fluid w-100 ">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <p class="small">
+                        <i class="fa-solid fa-location-dot p-2"></i>
+                        Barcelona, Spain
+                    </p>
+                </div>
+
+                <div class="col-12 col-lg-6 p-2">
+                    <p class="small">
+                        <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+                        <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
+                    </p>
+                </div>
+                <div class="small text-center col-12 col-lg-6 container-fluid">
+                    <p style="font-family:'Times New Roman', Times, serif;">
+                        © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                        Terms & Conditions | All Rights Reserved</p>
+                </div>
+            </div>
+
         </div>
 
 
