--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4137f8c74d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,24 +31,29 @@
 
 
         </div>
-        <div class="about-footer container-fluid w-100">
+        <div class="about-footer container-fluid w-100 p-2">
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-4 text-center">
                     <p class="small">
-                        <i class="fa-solid fa-location-dot p-2"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                         Barcelona, Spain
                     </p>
                 </div>
 
-                <div class="col-12 col-lg-6 p-2">
+                <div class="col-12 col-lg-4  text-center">
                     <p class="small">
                         <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+
+                    </p>
+                </div>
+                <div class="col-12 col-lg-4 text-center">
+                    <p class="small">
                         <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
                     </p>
                 </div>
-                <div class="small text-center col-12 col-lg-6 container-fluid">
+                <div class="small text-center col-12 container-fluid">
                     <p style="font-family:'Times New Roman', Times, serif;">
-                        © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                        © Designed & Developed by <b>Shreyash Dhomne</b> <br>
                         Terms & Conditions | All Rights Reserved</p>
                 </div>
             </div>
