added explore section

--- a/dining.html
+++ b/dining.html
@@ -37,8 +37,8 @@
         </div>
         <div class="dining-bg text-center">
             <section id="dining" class="dining-section">
-                <h2>Our Dining Experience</h2>
-                <p class="intro-text">
+                <h2 class="font-italic">Our Dining Experience</h2>
+                <p class="intro-text lead">
                     Indulge in a delightful culinary journey with a variety of meals prepared by our expert chefs. <br>
                     Choose from rich Indian flavors, authentic Italian dishes, or international cuisines,
                     thoughtfully crafted to make your dining experience memorable.
