--- a/room.html
+++ b/room.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orrencia-Royale</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4137f8c74d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
@@ -27,8 +28,8 @@
             <!-- <h1 class="sub-heading" style="color: black;">ROOMS</h1> -->
         </div>
         <section class="intro text-center ">
-            <h2>Discover Our Luxurious Rooms & Suites</h2>
-            <p>
+            <h2 class="font-italic">Discover Our Luxurious Rooms & Suites</h2>
+            <p class="lead">
                 At Orrencia Royale, each room is crafted to offer a blend of elegance, comfort,
                 and modern convenience. <br> Whether you seek a cozy retreat or a grand suite,
                 our accommodations are designed to make your stay unforgettable.
