--- a/about.html
+++ b/about.html
@@ -38,27 +38,28 @@
 
         </div>
         <div class="content">
-            <h2><i>Discover Orrencia Royale</i></h2>
-            <p>Welcome to Orrencia Royale, a sanctuary of timeless elegance. From our majestic lobby to breathtaking
-                views and world-class services, every detail is designed to offer you more than just a stay — an
+            <h2 class="intro-text font-italic">Discover Orrencia Royale</h2>
+            <p class="lead">A sanctuary of timeless elegance. From our majestic lobby to
+                breathtaking
+                views and world-class services, <br>every detail is designed to offer you more than just a stay — an
                 experience of pure luxury</p>
         </div>
 
         <div class="container-fluid">
             <div class="row">
-                <div style="background-color: beige;" class="col-12  col-lg-7  ">
+                <div style="background-color: beige;" class="col-12  col-lg-7 ">
                     <img class="img" src="about-1.jpg" width="100%" height="100%">
                 </div>
                 <div style="background-color: beige;" class="col-12 col-lg-5  ">
                     <div class="about-text1">
-                        <h3>Orrencia Royale is more than a destination —</h2>
+                        <h3>Orrencia Royale is more than a destination —</h3>
 
-                            <p>At Orrencia Royale, we blend modern luxury with classic charm, offering an experience of
-                                timeless elegance and refined comfort. From the moment you enter our grand lobby, you
-                                are embraced with warmth and exclusivity. Each room is a royal escape — complete with
-                                opulent interiors, serene ambiance, and personalized service. Whether indulging in fine
-                                dining or simply relaxing in our exquisite spaces, every moment with us is designed to
-                                be unforgettable.</p>
+                        <p>At Orrencia Royale, we blend modern luxury with classic charm, offering an experience of
+                            timeless elegance and refined comfort. From the moment you enter our grand lobby, you
+                            are embraced with warmth and exclusivity. Each room is a royal escape — complete with
+                            opulent interiors, serene ambiance, and personalized service. Whether indulging in fine
+                            dining or simply relaxing in our exquisite spaces, every moment with us is designed to
+                            be unforgettable.</p>
 
                     </div>
                 </div>
@@ -75,13 +76,13 @@
 
                 <div style=" background-color: beige;" class="col-12 col-lg-5  lobby-1">
                     <div class="about-text1">
-                        <h3>The Grand Lobby of Orrencia Royale —</h2>
+                        <h3>The Grand Lobby of Orrencia Royale —</h3>
 
-                            <p>The grand lobby of Orrencia Royale is more than an entrance — it's a statement of luxury.
-                                With soaring ceilings, glowing chandeliers, and refined décor, it welcomes you with
-                                warmth and exclusivity. Whether arriving, meeting, or simply pausing to admire its
-                                beauty, the lobby sets the perfect tone for your journey into elegance and unforgettable
-                                memories.</p>
+                        <p>The grand lobby of Orrencia Royale is more than an entrance — it's a statement of luxury.
+                            With soaring ceilings, glowing chandeliers, and refined décor, it welcomes you with
+                            warmth and exclusivity. Whether arriving, meeting, or simply pausing to admire its
+                            beauty, the lobby sets the perfect tone for your journey into elegance and unforgettable
+                            memories.</p>
                     </div>
                 </div>
                 <div style="  background-color: beige;" class="col-12  col-lg-7 lobby-2">
@@ -102,11 +103,11 @@
                 </div>
                 <div style="background-color: beige;" class="col-12 col-lg-5   ">
                     <div class="about-text1">
-                        <h3>Experience the View where the Ocean Meets Luxury —</h2>
-                            <p> Nestled along the turquoise shoreline, Orrencia Royale is where the beauty of the ocean
-                                meets timeless elegance. Wake up to the sound of waves, stroll across golden sands, and
-                                indulge in world-class comfort that makes every moment unforgettable. Here, the sea
-                                becomes your backdrop, and luxury becomes your lifestyle.</p>
+                        <h3>Experience the View where the Ocean Meets Luxury —</h3>
+                        <p> Nestled along the turquoise shoreline, Orrencia Royale is where the beauty of the ocean
+                            meets timeless elegance. Wake up to the sound of waves, stroll across golden sands, and
+                            indulge in world-class comfort that makes every moment unforgettable. Here, the sea
+                            becomes your backdrop, and luxury becomes your lifestyle.</p>
                     </div>
                 </div>
             </div>
