--- a/explore.html
+++ b/explore.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orrencia-Royale</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4137f8c74d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="d1">
-        <div class="hero">
+        <div class="explore-hero">
             <nav>
                 <ul class="nav-bar">
                     <li class="nav-items "><a class="text-white font-weight-bolder" href="index.html">Home</a></li>
@@ -23,13 +34,232 @@
                     <li class="nav-items"><a class="text-body font-weight-bolder" href="explore.html">Explore</a></li>
                 </ul>
             </nav>
-            <h1 class="sub-heading" style="color: black;">Explore</h1>
+            <!-- <h1 class="sub-heading" style="color: black;">Explore</h1> -->
         </div>
 
+        <div class="explore-heading">
+            <div class="heading-text">
+                <h2 class="font-italic t-1">Explore Barcelona with Orrencia Royale</h2>
+                <p class="lead t-2">Discover culture, cuisine, and experiences at your doorstep.</p>
+            </div>
+
+        </div>
+        <div class="explore-content">
+
+
+            <div class="nearby text-justify animate-on-scroll">
+                <h2 class="font-italic ">Nearby Attractions</h2>
+                <p class="lead small ">From iconic landmarks to hidden gems, Barcelona offers endless sights just
+                    minutes
+                    from
+                    Orrencia Royale. <br>Barcelona is a city that blends history, culture, art, and modern living,
+                    making it one of the most vibrant destinations in Europe.
+                    From the world-famous architectural wonders of Antoni Gaudí to bustling shopping streets, lively
+                    beaches, and rich culinary experiences,
+                    every corner has something unique to offer. Staying at Orrencia Royale places you in the heart of
+                    this energy, where you can stroll to
+                    iconic landmarks, discover local neighborhoods, and immerse yourself in the sights, sounds, and
+                    flavors of the city. Whether you're here
+                    for art, leisure, shopping, or simply to enjoy the Mediterranean vibe, unforgettable experiences
+                    await just steps away from your stay.</p>
+
+            </div>
+
+
+            <div class="places container-fluid">
+                <div class="row">
+                    <div style="background-color: rgb(249, 228, 195);" class="col-12  col-lg-7 ">
+                        <img class="img" src="/images/explore/Cathedral.jpg" width="100%" height="100%">
+                    </div>
+                    <div style="background-color: rgb(249, 228, 195);" class="col-12 col-lg-5  ">
+                        <div class="about-text1">
+                            <h3>La Sagrada Família— </h3>
+
+                            <p>The iconic basilica designed by Antoni Gaudí, still under construction for more than
+                                a century. Famous for its towering spires, intricate facades, and breathtaking
+                                interiors, it is Barcelona's most visited landmark and a UNESCO World Heritage
+                                Site. Located about 10 minutes from Orrencia Royale.</p>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="container-fluid  ">
+                <div class="row">
+
+                    <div style=" background-color: rgb(249, 228, 195);" class="col-12 col-lg-5  lobby-1">
+                        <div class="about-text1">
+                            <h3>Park Güell</h3>
+
+                            <p>A colorful park designed by Antoni Gaudí, known for its mosaic-covered benches,
+                                whimsical structures, and panoramic views of Barcelona. It blends nature with
+                                modernist art and is one of the city's most vibrant attractions. Located about 15
+                                minutes from Orrencia Royale.</p>
+                        </div>
+                    </div>
+                    <div style="  background-color:  rgb(249, 228, 195);" class="col-12  col-lg-7 lobby-2">
+                        <img class="img" src="/images/explore/Parc-Guell.jpg" width="100%" height="100%">
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="container-fluid  ">
+                <div class="row">
+
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12  col-lg-7 p-4">
+                        <img class="img" src="/images/explore/Casa-Batllo.jpg" width="100%" height="100%">
+                    </div>
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5   ">
+                        <div class="about-text1">
+                            <h3>Casa Batlló —</h3>
+                            <p>A masterpiece by Antoni Gaudí, renowned for its colorful façade, flowing organic shapes,
+                                and striking interiors. Often called the "House of Bones," it showcases Gaudí’s
+                                signature modernist style and is a UNESCO World Heritage Site.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-fluid  ">
+                <div class="row">
+
+                    <div style=" background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5  lobby-1">
+                        <div class="about-text1">
+                            <h3>Barceloneta Beach —</h3>
+
+                            <p>Barcelona's most popular seaside spot, ideal for sunbathing, swimming, and enjoying
+                                Mediterranean views. Lined with seafood restaurants and beach bars, it offers a lively
+                                atmosphere both day and night.</p>
+                        </div>
+                    </div>
+                    <div style="  background-color: rgb(249, 228, 195);" class="col-12  col-lg-7 lobby-2">
+                        <img class="img" src="/images/explore/barcelonita-beach.jpg" width="100%" height="100%">
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12  col-lg-7 ">
+                        <img class="img" src="/images/explore/Casa-Mila.jpg" width="100%" height="100%">
+                    </div>
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5  ">
+                        <div class="about-text1">
+                            <h3>Casa Milà —</h3>
+
+                            <p>Another Gaudí landmark, famous for its wavy stone façade and wrought-iron balconies. Its
+                                rooftop terrace with surreal chimneys is one of the most photographed spots in
+                                Barcelona, and the building is a UNESCO World Heritage Site.</p>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="container-fluid  ">
+                <div class="row">
+
+                    <div style=" background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5  lobby-1">
+                        <div class="about-text1">
+                            <h3>Camp Nou Stadium —</h3>
+
+                            <p>The legendary home of FC Barcelona, one of the largest football stadiums in Europe. A
+                                must-visit for sports fans, it features the Barça Museum and offers immersive tours of
+                                the pitch, locker rooms, and trophy collections.</p>
+                        </div>
+                    </div>
+                    <div style="  background-color: rgb(249, 228, 195);" class="col-12  col-lg-7 lobby-2">
+                        <img class="img" src="/images/explore/Camp-Nou.jpg" width="100%" height="100%">
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="container-fluid  ">
+                <div class="row">
+
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12  col-lg-7 p-4">
+                        <img class="img" src="/images/explore/Gothic-Quarter.jpg" width="100%" height="100%">
+                    </div>
+                    <div style="background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5   ">
+                        <div class="about-text1">
+                            <h3>Gothic Quarter —</h3>
+                            <p> The historic heart of Barcelona, known for its narrow medieval streets, charming
+                                squares, and Gothic architecture. Filled with cafes, boutiques, and hidden
+                                courtyards, it offers a blend of history, culture, and vibrant local life.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="container-fluid  ">
+                <div class="row">
+                    <div style=" background-color:  rgb(249, 228, 195);" class="col-12 col-lg-5  lobby-1">
+                        <div class="about-text1">
+                            <h3>Montjuïc Hill —</h3>
+
+                            <p>A cultural and scenic hotspot featuring museums, gardens, and panoramic views of the
+                                city. Highlights include the Magic Fountain, Montjuïc Castle, and the Olympic Stadium.
+                            </p>
+                        </div>
+                    </div>
+                    <div style="  background-color:  rgb(249, 228, 195);" class="col-12  col-lg-7 lobby-2">
+                        <img class="img" src="/images/explore/hill.jpg" width="100%" height="100%">
+                    </div>
+                </div>
+            </div>
+
+            <div class="nearby text-center" style="background-color:  rgb(249, 228, 195);">
+                <h2 class="font-italic ">Let Us Plan Your Perfect Exploration</h2>
+                <p class="lead small ">Please feel free to contact us if you would like assistance with your
+                    exploration.
+                    Our team can arrange a personalized tourism plan tailored to your interests.</p>
+
+                <div class="btn btn-primary">Plan My Tour</div>
+
+            </div>
 
 
 
 
+
+            <div class="about-footer container-fluid w-100 ">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <p class="small">
+                            <i class="fa-solid fa-location-dot p-2"></i>
+                            Barcelona, Spain
+                        </p>
+                    </div>
+
+                    <div class="col-12 col-lg-6 p-2">
+                        <p class="small">
+                            <i class="fa-solid fa-phone-volume"></i> +91 98*** **210 <br>
+                            <i class="fa-solid fa-envelope"></i>info@orrencia-royale.com
+                        </p>
+                    </div>
+                    <div class="small text-center col-12 col-lg-6 container-fluid">
+                        <p style="font-family:'Times New Roman', Times, serif;">
+                            © Designed & Developed by <b>Shreyash Dhomne</b><br>
+                            Terms & Conditions | All Rights Reserved</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
