--- a/order-form.html
+++ b/order-form.html
@@ -75,7 +75,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                     placeholder="Extra cheese , Fast delivery , etc."></textarea>
             </div>
-            <button type="submit" class="btn btn-info">Check Availability
+            <button type="submit" class="btn btn-info">Order Now
             </button>
         </form>
 
